test/TestPhases/typechecker/invalid/intMissingType.blc
module

function intMissingType()
    var a = -129
end
